# AdventOfCode

./: .bazelrc  .gitignore  CMakeLists.txt  conanfile.txt
2022/: BUILD  CMakeLists.txt  day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h  day8.cpp  day8.h  utility.h
2022/day1/: day1.cpp  day1.h
2022/day2/: day2.cpp  day2.h
2022/day3/: day3.h
2022/include/: random.h
2022/inputs/: BUILD
2022/src/: random.cpp
2024/: BUILD  day1.cpp  day1.h  day2.go  day3.go
2024/inputs/: BUILD
utility/cpp/: BUILD  file-util.h  string-util.h  utilities.h
utility/go/: BUILD  file-util.go  string-util.go
